--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,5 @@
       }
     },
   ],
-  "java.test.defaultConfig": "WPIlibUnitTests",
-  "files.autoSave": "afterDelay"
+  "java.test.defaultConfig": "WPIlibUnitTests"
 }
